<resources>
    <string name="app_name">Barker</string>
    <string name="action_settings">Settings</string>
    <string name="barker_title">Barker-Improve the Interactivity with our Dogs!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="action_sign_in_short">Register</string>

    <string name="email">Email</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>

    <string name="change_password">Change Password</string>

    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="remove_user">Remove user</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_dog_name">Name</string>

    <string name="hint_breed">Breed</string>

    <string name="hint_age">Age</string>

    <string name="hint_gender">Gender</string>

    <string name="action_enter_dog">Enter Dog</string>

    <string name="action_switch_activity">Search Dog</string>

    <string name="action_search_dog">Search Dog</string>

    <string name="hint_name">Fullname</string>

    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_reset_password">Reset Password</string>

    <string name="hint_new_email">New Email</string>

    <string name="btn_change">Change</string>

    <string name="btn_back">Back</string>

    <string name="btn_send">Send</string>

    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>

    <string name="btn_track_car">Track Car</string>

    <string name="btn_shutdown_car">Shutdown Car</string>

    <string name="btn_confirm_shutdown">Shutdown Car</string>

    <string name="main_menu">To Main Menu</string>

    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="prompt_password">prompt_password</string>

    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_enter_dog">EnterDog</string>
    <string name="title_activity_search_dog">SearchDog</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
</resources>
